--- a/op_plugin/config/v2r1/op_plugin_functions.yaml
+++ b/op_plugin/config/v2r1/op_plugin_functions.yaml
@@ -1654,6 +1654,10 @@ official:
    impl_ns: acl_op
  - func: silu.out(Tensor self, *, Tensor(a!) out) -> Tensor(a!)
    impl_ns: acl_op
+ - func: silu_backward.grad_input(Tensor grad_output, Tensor self, *, Tensor(a!) grad_input) -> Tensor(a!)
+   impl_ns: acl_op
+ - func: silu_backward(Tensor grad_output, Tensor self) -> Tensor
+   impl_ns: acl_op
  - func: binary_cross_entropy_with_logits(Tensor self, Tensor target, Tensor? weight=None, Tensor? pos_weight=None, int reduction=Mean) -> Tensor
    impl_ns: acl_op
  - func: selu(Tensor self) -> Tensor
