Manual autograd to codegen autograd.

--- a/op_plugin/CMakeLists.txt
+++ b/op_plugin/CMakeLists.txt
@@ -30,7 +30,8 @@ endif()
 
 FILE(GLOB _OPPLUGIN_VERSION_SRCS
     ops/${OPS_VERSION_NAME}/aclops/*.cpp
-    ops/${OPS_VERSION_NAME}/opapi/*.cpp)
+    ops/${OPS_VERSION_NAME}/opapi/*.cpp
+    ops/${OPS_VERSION_NAME}/*.cpp)
 LIST(APPEND OPS_PLUGIN_SRCS ${_OPPLUGIN_VERSION_SRCS})
 
 # Pass to parents
