--- a/op_plugin/config/v2r1/derivatives.yaml
+++ b/op_plugin/config/v2r1/derivatives.yaml
@@ -2,6 +2,69 @@
 #
 #If you need any guidance, please refer to the comments in derivatives.yaml in PyTorch.
 
+- name: npu_multi_head_attention(Tensor query, Tensor key, Tensor value, Tensor query_weight, Tensor key_weight, Tensor value_weight, Tensor attn_mask, Tensor out_proj_weight, Tensor? query_bias, Tensor? key_bias, Tensor? value_bias, Tensor? out_proj_bias, Tensor? dropout_mask, int attn_head_num, int attn_dim_per_head, int src_len, int tgt_len, float dropout_prob, bool softmax_use_float) -> (Tensor, Tensor, Tensor, Tensor, Tensor, Tensor, Tensor, Tensor)
+  output_differentiability: [True, False, False, False, False, False, False, False]
+  query_weight, key_weight, value_weight, out_proj_weight, query, key, value, query_bias, key_bias, value_bias, out_proj_bias: npu_multi_head_attention_backward(query, key, value, query_weight, key_weight, value_weight, out_proj_weight, query_bias, key_bias, value_bias, out_proj_bias, result2, result3, result4, result5, result6, result7, grad, result1, attn_head_num, attn_dim_per_head, src_len, tgt_len, dropout_prob, softmax_use_float)
+
+- name: npu_gru(Tensor input, Tensor hx, Tensor weight_input, Tensor weight_hidden, Tensor bias_input, Tensor bias_hidden, Tensor seq_length, bool has_biases, int num_layers, float dropout, bool train, bool bidirectional, bool batch_first) -> (Tensor, Tensor, Tensor, Tensor, Tensor, Tensor)
+  output_differentiability: [True, True, False, False, False, False]
+  weight_input, weight_hidden, input, bias_input, bias_hidden, hx: npu_gru_backward(grads[0], grads[1], input, weight_input, weight_hidden, bias_input, bias_hidden, seq_length, hx, result0, result1, result2, result3, result4, result5)
+
+- name: npu_lstm(Tensor input, Tensor weight, Tensor bias, Tensor seq_mask, Tensor h, Tensor c, bool has_biases, int num_layers, float dropout, bool train, bool bidirectional, bool batch_first, bool flag_seq, bool direction) -> (Tensor, Tensor, Tensor, Tensor, Tensor, Tensor, Tensor, Tensor)
+  output_differentiability: [True, True, True, False, False, False, False, False]
+  input, weight, bias, h, c: npu_lstm_backward(grads[0], grads[1], grads[2], input, weight, bias, h, c, result0, result1, result2, result3, result4, result5, result6, result7)
+
+- name: npu_lstm_data(Tensor input, Tensor batch_sizes, Tensor weight, Tensor bias, Tensor seq_mask, Tensor h, Tensor c, bool has_biases, int num_layers, float dropout, bool train, bool bidirectional, bool batch_first, bool flag_seq, bool direction) -> (Tensor, Tensor, Tensor, Tensor, Tensor, Tensor, Tensor, Tensor)
+  output_differentiability: [True, True, True, False, False, False, False, False]
+  input, weight, bias, h, c: npu_lstm_data_backward(grads[0], grads[1], grads[2], input, batch_sizes, weight, bias, h, c, result0, result1, result2, result3, result4, result5, result6, result7)
+
+- name: npu_lstm_cell(Tensor input, Tensor w_ih, Tensor w_hh, Tensor h, Tensor c, Tensor? bias=None) -> (Tensor, Tensor, Tensor, Tensor, Tensor, Tensor, Tensor, Tensor)
+  output_differentiability: [True, True, True, False, False, False, False, False]
+  input, w_ih, w_hh, bias, h, c: npu_lstm_cell_backward(grads[0], grads[1], grads[2], input, w_ih, w_hh, h, c, result0, result1, result2, result3, result4, result5, result6, result7)
+
+- name: _dropout_with_byte_mask(Tensor self, float p) -> (Tensor, Tensor)
+  self: _dropout_with_byte_mask_backward(grad, result1, p)
+
+- name: _npu_dropout(Tensor self, float p) -> (Tensor, Tensor)
+  self: npu_dropout_backward(grad, result1, p)
+
+- name: npu_dropout_do_mask(Tensor self, Tensor mask, float p) -> (Tensor, Tensor)
+  self: npu_dropout_backward(grad, result1, p)
+
+- name: _npu_ciou(Tensor self, Tensor gtboxes, bool trans=False, bool is_cross=True, int mode=0, bool atan_sub_flag=False) -> (Tensor, Tensor)
+  self, gtboxes: npu_ciou_backward(grad, self, gtboxes, result1, trans, is_cross, mode)
+
+- name: npu_fused_attention_score_fwd(Tensor query_layer, Tensor key_layer, Tensor value_layer, Tensor attention_mask, Scalar scale, float keep_prob, bool query_transpose=False, bool key_transpose=False, bool bmm_score_transpose_a=False, bool bmm_score_transpose_b=False, bool value_transpose=False, bool dx_transpose=False) -> (Tensor, Tensor, Tensor)
+  query_layer, key_layer, value_layer: npu_fused_attention_score_backward(grad, result1, query_layer, key_layer, value_layer, result2, scale, keep_prob, query_transpose, key_transpose, value_transpose, dx_transpose)
+
+- name: npu_bmmV2(Tensor self, Tensor mat2, int[] output_sizes) -> Tensor
+  self: npu_bmm_v2_mat1_backward(grad, self, mat2, self.sym_sizes())
+  mat2: npu_bmm_v2_mat2_backward(grad, self, mat2, mat2.sym_sizes())
+
+- name: npu_max.dim(Tensor self, int dim, bool keepdim=False) -> (Tensor values, Tensor indices)
+  self: npu_max_backward(grad, dim, indices, self.sym_sizes(), keepdim)
+
+- name: npu_min.dim(Tensor self, int dim, bool keepdim=False) -> (Tensor values, Tensor indices)
+  self: npu_min_backward(grad, dim, indices, self.sym_sizes(), keepdim)
+
+- name: npu_ps_roi_pooling(Tensor self, Tensor rois, float spatial_scale, int group_size, int output_dim) -> Tensor
+  self: npu_ps_roi_pooling_backward(grad, rois, spatial_scale, group_size, output_dim, {self.sym_size(2), self.sym_size(3)})
+
+- name: npu_confusion_transpose(Tensor self, int[] perm, int[] shape, bool transpose_first) -> Tensor
+  self: npu_confusion_transpose_backward(grad, perm, self.sym_sizes(), !transpose_first)
+
+- name: celu(Tensor self, Scalar alpha=1.0) -> Tensor
+  self: celu_backward(grad, alpha, result)
+
+- name: elu(Tensor self, Scalar alpha=1, Scalar scale=1, Scalar input_scale=1) -> Tensor
+  self: elu_backward(grad, alpha, scale, input_scale, result)
+
+- name: selu(Tensor self) -> Tensor
+  self: selu_backward(grad, result)
+
+- name: npu_silu(Tensor self) -> Tensor
+  self: npu_silu_backward(grad, self, result)
+
 - name: fast_gelu(Tensor self) -> Tensor
   self: npu_fast_gelu_backward(grad, self)
 
