Fix bug in var and std.

--- a/op_plugin/config/v2r1/npu_native_functions.yaml
+++ b/op_plugin/config/v2r1/npu_native_functions.yaml
@@ -1480,11 +1480,21 @@ supported:
    wrap_impl: std_out
  - func: std.out
    wrap_impl: std_out
+ - func: std.correction_names
+   wrap_impl: std
+ - func: std.correction_out
+   wrap_impl: std_out
+ - func: std.correction_names_out
+   wrap_impl: std_out
  - func: std_mean
    wrap_impl: std_mean
  - func: std_mean.dim
    wrap_impl: std_mean
  - func: std_mean.names_dim
+   wrap_impl: std_mean
+ - func: std_mean.correction
+   wrap_impl: std_mean
+ - func: std_mean.correction_names
    wrap_impl: std_mean
  - func: sub.Scalar
    wrap_impl: sub
