Fix the calculate type of remainder and support remainder.Scalar_Tensor.

--- a/op_plugin/config/v2r1/op_plugin_functions.yaml
+++ b/op_plugin/config/v2r1/op_plugin_functions.yaml
@@ -1258,6 +1258,8 @@ official:
    impl_ns: acl_op
  - func: remainder_.Tensor(Tensor(a!) self, Tensor other) -> Tensor(a!)
    impl_ns: acl_op
+ - func: remainder.Scalar_Tensor(Scalar self, Tensor other) -> Tensor
+   impl_ns: acl_op
  - func: renorm(Tensor self, Scalar p, int dim, Scalar maxnorm) -> Tensor
    impl_ns: acl_op
  - func: renorm.out(Tensor self, Scalar p, int dim, Scalar maxnorm, *, Tensor(a!) out) -> Tensor(a!)
