Autograd codegen: npu_format_cast

--- a/op_plugin/config/v2r1/derivatives.yaml
+++ b/op_plugin/config/v2r1/derivatives.yaml
@@ -114,3 +114,6 @@
 
 - name: l1_loss(Tensor self, Tensor target, int reduction=Mean) -> Tensor
   self: l1_loss_backward(grad, self, target, reduction)
+
+- name: npu_format_cast(Tensor self, int acl_format) -> Tensor
+  self: grad
