[torch2.1]add hardshrink_backward.grad_input

--- a/op_plugin/config/v1r11/npu_native_functions.yaml
+++ b/op_plugin/config/v1r11/npu_native_functions.yaml
@@ -1011,6 +1011,8 @@ supported:
    wrap_impl: hardshrink
  - func: hardshrink_backward
    wrap_impl: hardshrink_backward
+ - func: hardshrink_backward.grad_input
+   wrap_impl: hardshrink_backward_out
  - func: hardsigmoid
    wrap_impl: hardsigmoid
    op_api: True
