--- a/op_plugin/config/v2r1/op_plugin_functions.yaml
+++ b/op_plugin/config/v2r1/op_plugin_functions.yaml
@@ -2011,4 +2011,5 @@ custom:
     impl_ns: acl_op
   - func: _npu_ciou(Tensor self, Tensor gtboxes, bool trans=False, bool is_cross=True, int mode=0, bool atan_sub_flag=False) -> (Tensor, Tensor)
     impl_ns: acl_op
-
+  - func: scatter_update(Tensor data, Tensor indices, Tensor updates, int axis) -> Tensor
+    impl_ns: acl_op
