--- a/op_plugin/config/v1r11/op_plugin_functions.yaml
+++ b/op_plugin/config/v1r11/op_plugin_functions.yaml
@@ -448,6 +448,14 @@ official:
    impl_ns: acl_op, op_api
  - func: clamp_min_.Tensor(Tensor(a!) self, Tensor min) -> Tensor(a!)
    impl_ns: acl_op, op_api
+ - func: complex(Tensor real, Tensor imag) -> Tensor
+   impl_ns: acl_op
+ - func: complex.out(Tensor real, Tensor imag, *, Tensor(a!) out) -> Tensor(a!)
+   impl_ns: acl_op
+ - func: diagflat(Tensor self, int offset=0) -> Tensor
+   impl_ns: acl_op
+ - func: real(Tensor(a) self) -> Tensor(a)
+   impl_ns: acl_op
  - func: col2im(Tensor self, int[2] output_size, int[2] kernel_size, int[2] dilation, int[2] padding, int[2] stride) -> Tensor
    impl_ns: acl_op, op_api
  - func: col2im.out(Tensor self, int[2] output_size, int[2] kernel_size, int[2] dilation, int[2] padding, int[2] stride, *, Tensor(a!) out) -> Tensor(a!)
