--- a/op_plugin/config/v2r1/op_plugin_functions.yaml
+++ b/op_plugin/config/v2r1/op_plugin_functions.yaml
@@ -404,6 +404,14 @@ official:
    impl_ns: acl_op, op_api
  - func: ceil_(Tensor(a!) self) -> Tensor(a!)
    impl_ns: acl_op
+ - func: complex(Tensor real, Tensor imag) -> Tensor
+   impl_ns: acl_op
+ - func: complex.out(Tensor real, Tensor imag, *, Tensor(a!) out) -> Tensor(a!)
+   impl_ns: acl_op
+ - func: diagflat(Tensor self, int offset=0) -> Tensor
+   impl_ns: acl_op
+ - func: real(Tensor(a) self) -> Tensor(a)
+   impl_ns: acl_op
  - func: channel_shuffle(Tensor self, int groups) -> Tensor
    impl_ns: acl_op
  - func: clamp(Tensor self, Scalar? min=None, Scalar? max=None) -> Tensor
