--- a/op_plugin/config/v1r11/op_plugin_functions.yaml
+++ b/op_plugin/config/v1r11/op_plugin_functions.yaml
@@ -211,7 +211,7 @@ official:
  - func: addr_(Tensor(a!) self, Tensor vec1, Tensor vec2, *, Scalar beta=1, Scalar alpha=1) -> Tensor(a!)
    impl_ns: acl_op, op_api
  - func: affine_grid_generator(Tensor theta, int[] size, bool align_corners) -> Tensor
-   impl_ns: acl_op
+   impl_ns: acl_op, op_api
  - func: affine_grid_generator_backward(Tensor grad, int[] size, bool align_corners) -> Tensor
    impl_ns: acl_op
  - func: all(Tensor self) -> Tensor
@@ -788,6 +788,8 @@ official:
    impl_ns: acl_op, op_api
  - func: isfinite(Tensor self) -> Tensor
    impl_ns: acl_op
+ - func: isin.Scalar_Tensor_out(Scalar element, Tensor test_elements, *, bool assume_unique=False, bool invert=False, Tensor(a!) out) -> Tensor(a!)
+   impl_ns: op_api
  - func: isposinf.out(Tensor self, *, Tensor(a!) out) -> Tensor(a!)
    impl_ns: acl_op, op_api
  - func: isneginf.out(Tensor self, *, Tensor(a!) out) -> Tensor(a!)
@@ -1232,10 +1234,6 @@ official:
    impl_ns: acl_op, op_api
  - func: prod(Tensor self, *, ScalarType? dtype=None) -> Tensor
    impl_ns: acl_op, op_api
- - func: prod.Dimname_out(Tensor self, Dimname dim, bool keepdim=False, *, ScalarType? dtype=None, Tensor(a!) out) -> Tensor(a!)
-   impl_ns: acl_op
- - func: prod.dim_Dimname(Tensor self, Dimname dim, bool keepdim=False, *, ScalarType? dtype=None) -> Tensor
-   impl_ns: acl_op
  - func: prod.dim_int(Tensor self, int dim, bool keepdim=False, *, ScalarType? dtype=None) -> Tensor
    impl_ns: acl_op, op_api
  - func: prod.int_out(Tensor self, int dim, bool keepdim=False, *, ScalarType? dtype=None, Tensor(a!) out) -> Tensor(a!)
